Add solutions to points 5, 6 and BONUS

--- a/lab-2.ipynb
+++ b/lab-2.ipynb
@@ -25,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10910, 26)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -53,37 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Unnamed: 0', 'Customer', 'State', 'Customer Lifetime Value',\n",
-      "       'Response', 'Coverage', 'Education', 'Effective To Date',\n",
-      "       'EmploymentStatus', 'Gender', 'Income', 'Location Code',\n",
-      "       'Marital Status', 'Monthly Premium Auto', 'Months Since Last Claim',\n",
-      "       'Months Since Policy Inception', 'Number of Open Complaints',\n",
-      "       'Number of Policies', 'Policy Type', 'Policy', 'Renew Offer Type',\n",
-      "       'Sales Channel', 'Total Claim Amount', 'Vehicle Class', 'Vehicle Size',\n",
-      "       'Vehicle Type'],\n",
-      "      dtype='object')\n",
-      "0            0\n",
-      "1            1\n",
-      "2            2\n",
-      "3            3\n",
-      "4            4\n",
-      "         ...  \n",
-      "10905    10905\n",
-      "10906    10906\n",
-      "10907    10907\n",
-      "10908    10908\n",
-      "10909    10909\n",
-      "Name: Unnamed: 0, Length: 10910, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.set_option('max_columns', None)\n",
     "\n",
@@ -99,65 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  customer       state  customer lifetime value response  coverage education  \\\n",
-      "0  DK49336     Arizona              4809.216960       No     Basic   College   \n",
-      "1  KX64629  California              2228.525238       No     Basic   College   \n",
-      "2  LZ68649  Washington             14947.917300       No     Basic  Bachelor   \n",
-      "3  XL78013      Oregon             22332.439460      Yes  Extended   College   \n",
-      "4  QA50777      Oregon              9025.067525       No   Premium  Bachelor   \n",
-      "\n",
-      "  effective to date employment status gender  income location code  \\\n",
-      "0           2/18/11          Employed      M   48029      Suburban   \n",
-      "1           1/18/11        Unemployed      F       0      Suburban   \n",
-      "2           2/10/11          Employed      M   22139      Suburban   \n",
-      "3           1/11/11          Employed      M   49078      Suburban   \n",
-      "4           1/17/11     Medical Leave      F   23675      Suburban   \n",
-      "\n",
-      "  marital status  monthly premium auto  months since last claim  \\\n",
-      "0        Married                    61                      7.0   \n",
-      "1         Single                    64                      3.0   \n",
-      "2         Single                   100                     34.0   \n",
-      "3         Single                    97                     10.0   \n",
-      "4        Married                   117                      NaN   \n",
-      "\n",
-      "   months since policy inception  number of open complaints  \\\n",
-      "0                             52                        0.0   \n",
-      "1                             26                        0.0   \n",
-      "2                             31                        0.0   \n",
-      "3                              3                        0.0   \n",
-      "4                             31                        NaN   \n",
-      "\n",
-      "   number of policies     policy type        policy renew offer type  \\\n",
-      "0                   9  Corporate Auto  Corporate L3           Offer3   \n",
-      "1                   1   Personal Auto   Personal L3           Offer4   \n",
-      "2                   2   Personal Auto   Personal L3           Offer3   \n",
-      "3                   2  Corporate Auto  Corporate L3           Offer2   \n",
-      "4                   7   Personal Auto   Personal L2           Offer1   \n",
-      "\n",
-      "  sales channel  total claim amount  vehicle class vehicle size vehicle type  \n",
-      "0         Agent          292.800000  Four-Door Car      Medsize          NaN  \n",
-      "1   Call Center          744.924331  Four-Door Car      Medsize          NaN  \n",
-      "2   Call Center          480.000000            SUV      Medsize            A  \n",
-      "3        Branch          484.013411  Four-Door Car      Medsize            A  \n",
-      "4        Branch          707.925645  Four-Door Car      Medsize          NaN  \n",
-      "Index(['customer', 'state', 'customer lifetime value', 'response', 'coverage',\n",
-      "       'education', 'effective to date', 'employment status', 'gender',\n",
-      "       'income', 'location code', 'marital status', 'monthly premium auto',\n",
-      "       'months since last claim', 'months since policy inception',\n",
-      "       'number of open complaints', 'number of policies', 'policy type',\n",
-      "       'policy', 'renew offer type', 'sales channel', 'total claim amount',\n",
-      "       'vehicle class', 'vehicle size', 'vehicle type'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Review the rest of the data\n",
     "print(df.head())\n",
@@ -197,7 +105,281 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. Check and deal with `NaN` values."
+    "#### 5. Check and deal with `NaN` values.\n",
+    "\n",
+    "First off, we'll look at the amount of null values within the numerical columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_values = df.isna().sum()\n",
+    "\n",
+    "print(null_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we'll compare this to the size of the data frame:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_values_percentage = null_values * 100 / df.shape[0]\n",
+    "print(null_values_percentage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given that the vehicle type column has 1/2 missing values, we can drop that column. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('vehicle type', axis = 1, inplace = True)\n",
+    "\n",
+    "# Check that the drop was successful\n",
+    "print(df.shape)\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's check how many rows have null values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_dataframe = df[(df['state'].isna()) | (df['response'].isna()) \n",
+    "| (df['months since last claim'].isna()) | (df['number of open complaints'].isna())\n",
+    "| (df['vehicle class'].isna()) | (df['vehicle size'].isna())]\n",
+    "\n",
+    "print(null_dataframe.shape)\n",
+    "print(null_dataframe.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the rows with at least one NaN value make up for ~16% of the dataframe, we can only remove very few of these rows. Let's check how many rows have NaN values in the categorical columns _state_ and _response_:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_dataframe = df[(df['state'].isna()) | (df['response'].isna())]\n",
+    "print(null_dataframe.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Should we replace the NaN values with the modes of these columns?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states_count = df['state'].value_counts()\n",
+    "response_count = df['response'].value_counts()\n",
+    "\n",
+    "print(states_count)\n",
+    "print(response_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could choose California as the default state, however Oregon & Arizona are relatively close contenders. Therefore, we'll drop the rows, which will automatically remove the null values in the _response_ column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[(df['state'].isna() == False) | (df['response'].isna() == False)]\n",
+    "\n",
+    "#Check that the rows were droped\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're going to follow the same thinking for the _vehicle class_ and _vehicle size_ categorical columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehicle_class_count = df['vehicle class'].value_counts()\n",
+    "vehicle_size_count = df['vehicle size'].value_counts()\n",
+    "\n",
+    "print(vehicle_class_count)\n",
+    "print(vehicle_size_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, it is more obvious what the mode for each columns is, so we'll replace the null values with that:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehicle_class_mode = df['vehicle class'].mode()[0]\n",
+    "vehicle_size_mode = df['vehicle size'].mode()[0]\n",
+    "\n",
+    "df['vehicle class'] = df['vehicle class'].fillna(vehicle_class_mode)\n",
+    "df['vehicle size'] = df['vehicle size'].fillna(vehicle_size_mode)\n",
+    "\n",
+    "# Check if there are still NaN values in the columns\n",
+    "print(df['vehicle class'].isna().sum())\n",
+    "print(df['vehicle size'].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the rest of the columns, we can replace the null values with the mean value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that the columns have float/int data types:\n",
+    "# print(df.dtypes)\n",
+    "\n",
+    "# Since the 'months since last claim' and 'number of open complaints' columns are already float64 types,\n",
+    "# we can calculate their mean:\n",
+    "mean_months = np.mean(df['months since last claim'])\n",
+    "mean_open_complaints = np.mean(df['number of open complaints'])\n",
+    "\n",
+    "df['months since last claim'] = df['months since last claim'].fillna(mean_months)\n",
+    "df['number of open complaints'] = df['number of open complaints'].fillna(mean_open_complaints)\n",
+    "\n",
+    "# Check if there are still NaN values in the columns\n",
+    "print(df['months since last claim'].isna().sum())\n",
+    "print(df['number of open complaints'].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Datetime format - Extract the months from the dataset and store in a separate column. Then filter the data to show only the information for the first quarter , ie. January, February and March. Hint: If data from March does not exist, consider only January and February."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the data type in the column\n",
+    "print(df['effective to date'].dtypes)\n",
+    "\n",
+    "# Convert to datetime format\n",
+    "df['effective to date'] = pd.to_datetime(df['effective to date'], errors='coerce')\n",
+    "\n",
+    "# Check the data type again\n",
+    "print(df['effective to date'].dtypes)\n",
+    "print(df['effective to date'].head())\n",
+    "\n",
+    "# Extract the months from the dataset\n",
+    "df['months'] = df.apply(lambda x: x['effective to date'].month, axis = 1)\n",
+    "\n",
+    "# Check the dataframe again\n",
+    "df['months'].head()\n",
+    "\n",
+    "# Filter the data to show only first quarter info\n",
+    "df = df[(df['months'] > 0) & (df['months'] < 4)]\n",
+    "\n",
+    "# Check that the data was filtered\n",
+    "print(df['months'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Put all the previously mentioned data transformations into a function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Re-reading the data to test the function\n",
+    "df_new = pd.read_csv('files_for_lab/csv_files/marketing_customer_analysis.csv')\n",
+    "\n",
+    "# will keep the most general items\n",
+    "def big_clean(df):\n",
+    "\n",
+    "    # Standardize column names\n",
+    "    df.columns = df.columns.str.lower()\n",
+    "\n",
+    "    # Clean NaN values & extra index column. Will replace all NaN by the mode in this case\n",
+    "    for column in df.columns:\n",
+    "        if (df[column].isna().sum() / df.shape[0]) > 0.5:\n",
+    "            df.drop(column, axis = 1, inplace = True)\n",
+    "        elif (df[column].isna().sum() > 0):\n",
+    "            if df[column].dtypes == object:\n",
+    "                df[column] = df[column].fillna(df[column].mode()[0])\n",
+    "            else:\n",
+    "                df[column] = df[column].fillna(np.mean(df[column]))\n",
+    "    \n",
+    "    return df.head(), df.isna().sum().sum()\n",
+    "\n",
+    "# Checking if the formula works\n",
+    "big_clean(df_new)"
    ]
   },
   {
